--- a/Weitianshi/pages/my/projectShop/projectShop/projectShop.wxml
+++ b/Weitianshi/pages/my/projectShop/projectShop/projectShop.wxml
@@ -1,4 +1,5 @@
 <import src="/pages/Template/Template.wxml" />
+<!--筛选和搜索  -->
 <view class="	screen flex">
   <!--筛选  -->
   <block wx:for='{{tab}}' wx:key='index'>
@@ -7,6 +8,7 @@
       <image class='withAnimate {{currentIndex==index?"rotate" : ""}}' src='/img/downArrow.png'></image>
     </view>
   </block>
+  <!--搜索  -->
   <icon type="search" size="15" class="search_icon"></icon>
   <!--下拉框  -->
   <view class='dropDown withAnimate'>
@@ -24,19 +26,19 @@
       </block>
       <!--轮次  -->
       <block wx:for='{{stage}}' wx:if='{{currentIndex==1}}' wx:key='item.stage_id' wx:for-item='item2' wx:for-index='index2'>
-        <view class='checkbox'>
+        <view class='checkbox {{item2.check==true?"checkOne":""}}' data-item="{{item2}}" data-index="{{index2}}" bindtap='tagsCheck'>
           {{item2.stage_name}}
         </view>
       </block>
       <!--金额  -->
       <block wx:for='{{scale}}' wx:if='{{currentIndex==2}}' wx:key='item.sacle_id' wx:for-item='item3' wx:for-index='index3'>
-        <view class='checkbox scale'>
+        <view class='checkbox scale {{item3.check==true?"checkOne":""}}' data-item="{{item3}}" data-index="{{index3}}" bindtap='tagsCheck'>
           {{item3.scale_money}}
         </view>
       </block>
       <!--地区  -->
       <block wx:for='{{hotCity}}' wx:if='{{currentIndex==3}}' wx:key='item.area_id' wx:for-item='item4' wx:for-index='index4'>
-        <view class='checkbox'>
+        <view class='checkbox {{item4.check==true?"checkOne":""}}' data-item="{{item4}}" data-index="{{index4}}" bindtap='tagsCheck'>
           {{item4.area_title}}
         </view>
       </block>
@@ -68,12 +70,14 @@
   </view>
   <view class="userCompany">{{userInfo.user_company_name}}</view>
 </view>
+<!--店铺描述  -->
 <view class="shopDesBox" wx:if="{{userInfo.user_intro}}">
   <view class="shopDes">店铺描述</view>
   <view class="shopContent"  class="{{isChecked?'shopContent':'shopContentAfer'}}">{{userInfo.user_intro}}</view>
   <label class="more" bindtap="allPoint" wx:if="{{isChecked == true && contentMore== true}}">全部</label>
   <label class="more" bindtap="noPoint" wx:if="{{isChecked == false && contentMore == true}}">收起</label></view>
 <view style="height:30rpx;"></view>
+<!--符合条件的我的项目  -->
 <scroll-view style="height:500rpx;" scroll-y="true" bindscrolltolower='myPublicProject'>
   <block wx:for="{{myProject}}" wx:key="{{index}}">
     <view class="outBox picFather" wx:if="{{item.handle_status != 2 }}">
