--- a/Weitianshi/pages/my/projectShop/projectShop/projectShop.wxss
+++ b/Weitianshi/pages/my/projectShop/projectShop/projectShop.wxss
@@ -428,7 +428,7 @@ page {
   width: 208rpx;
 }
 .deepBlue{
-  color: #40587a;
+   color: #40587a;
 }
 .rotate{
   transform: rotate(180deg);
@@ -440,7 +440,16 @@ page {
 .search_icon{
   padding: 10rpx 30rpx;
 }  
-
+.modal{
+  position: absolute;
+  left: 0;
+  top: 80rpx;
+  width: 100%;
+  height: 1174rpx;
+  background: black;
+  opacity: 0.5;
+  z-index:99;
+}
 /*为空  */
 .emptyStyle {
   font-size: 28rpx;
