--- a/Weitianshi/pages/contactsActivty/topPlayer/topPlayer.wxml
+++ b/Weitianshi/pages/contactsActivty/topPlayer/topPlayer.wxml
@@ -31,8 +31,11 @@
           <view class="flex totalNum">
             <view class="{{item.rank  >10 ? 'noColor' : 'topRank'}}">top{{item.rank}}</view>
             <view class="rightBox flex">
-              <view class="firstFriend">一级人脉：<label class="personNum">{{item.one_level}}</label> ，</view>
-              <view class="secondFriend">二级人脉：<label class="personNum">{{item.two_level}}</label></view>
+              <view class="firstFriend">一级人脉：
+                <label class="personNum">{{item.one_level}}</label> ，</view>
+              <view class="secondFriend">二级人脉：
+                <label class="personNum">{{item.two_level}}</label>
+              </view>
             </view>
           </view>
           <view class="flex infoBox">
@@ -51,7 +54,7 @@
                 <view class="refuse" wx:if="{{item.follow_status == 2}}">待验证</view>
                 <view class="addPersonBtn" wx:if="{{item.follow_status == 0 || item.follow_status == 3}}" data-applyid="{{item.user_id}}" data-follow_status="{{item.follow_status}}" catchtap="addPerson">加人脉</view>
               </view>
-              <button plain='true' class='addNetwork sharePage' open-type='share' data-applyid="{{item.user_id}}" data-name='{{item.user_real_name}}'>分享名片</button>
+              <button plain='true' class='addNetwork sharePage' open-type='share' data-applyid="{{item.user_id}}" data-name='{{item.user_real_name}}'>为他拉票</button>
             </view>
           </view>
         </view>
@@ -63,16 +66,27 @@
   <swiper-item>
     <scroll-view bindscrolltolower="loadMore" scroll-top="{{scroll}}" scroll-y="true">
       <view id="explain">排行规则：总人脉数（一级人脉+二级人脉）最多者</view>
-      <view style="height:80rpx;"></view>
-      <block wx:for="{{team_rank_list}}" wx:key="{{index}}" bindtap="allPerson">
-        <view bindtap="allPerson" data-id="{{item.team_id}}">
-          <view class="flex totalNum">
+      <!--搜索框  -->
+      <view class="search_frame" style='margin-top:80rpx;'>
+        <label class="searchBox flex">
+          <icon type="search" size="12" class="search_icon"></icon>
+          <input class="searchInput" placeholder="搜索战队名、创始人" value='{{str}}' bindinput="searchSth" />
+        </label>
+      </view>
+      <view style="height:168rpx;"></view>
+      <block wx:for="{{team_rank_list}}" wx:key="{{index}}">
+        <view bindtap="allPerson" data-id="{{item.team_id}}" data-name='{{item.team_name}}'>
+          <view class="flex totalNum" wx:if='{{item.rank}}'>
             <view class="{{item.rank  >10 ? 'noColor' : 'topRank'}}">top{{item.rank}}</view>
             <view class="rightBox flex">
-              <view class="firstFriend">一级人脉：<label class="personNum">{{item.one_level}}</label> ，</view>
-              <view class="secondFriend">二级人脉：<label class="personNum">{{item.two_level}}</label></view>
+              <view class="firstFriend">一级人脉：
+                <label class="personNum">{{item.one_level}}</label> ，</view>
+              <view class="secondFriend">二级人脉：
+                <label class="personNum">{{item.two_level}}</label>
+              </view>
             </view>
           </view>
+          <view class='totalNum' wx:else style='heigth:64rpx;'></view>
           <view class="flex infoBox">
             <view class="brandPic">
               <image src="/img/warband-logo.png" wx:if="{{item.team_logo_text}}" class="team_logo"></image>
@@ -80,7 +94,9 @@
             </view>
             <view class="infoCenter">
               <view class="brandName">{{item.team_name}}</view>
-              <view class="representativeName">代表人：<label>{{item.team_founder}}</label></view>
+              <view class="representativeName">代表人：
+                <label>{{item.team_founder}}</label>
+              </view>
             </view>
             <view class="infoRight">
               <view class="flex addNetwork">
