--- a/Weitianshi/pages/contactsActivty/warbandMember/warbandMember.wxml
+++ b/Weitianshi/pages/contactsActivty/warbandMember/warbandMember.wxml
@@ -30,7 +30,7 @@
   <view class="hasNothing">暂无成员</view>
 </view>
 <view class="flex btn">
-  <view class="addWar" bindtap="addWar" wx:if="{{follow_status == 0}}">加战队</view>
+   <view class="addWar" bindtap="addWar" wx:if="{{follow_status == 0}}">加战队</view>
    <view class="addWar" wx:if="{{follow_status == 1}}">已加入</view> 
-  <button open-type="share" id="share" class="invitePersons">邀请成员</button>
+  <button open-type="share" id="share" class="invitePersons">为他拉票</button>
 </view>
