--- a/Weitianshi/pages/projectDetail/projectDetail.wxss
+++ b/Weitianshi/pages/projectDetail/projectDetail.wxss
@@ -458,6 +458,8 @@ scroll-view {
   text-align: left;
   margin-right: 16rpx;
   margin-top: 32rpx;
+  text-overflow: ellipsis;
+  overflow: hidden;
   white-space: nowrap;
 }
 
