--- a/Weitianshi/pages/userDetail/networkDetail/networkDetail.wxml
+++ b/Weitianshi/pages/userDetail/networkDetail/networkDetail.wxml
@@ -8,7 +8,7 @@
   <template is="userIntro" data="{{user:user}}"></template>
 
   <!--他的项目库-->
-  <template is="financingProject" data="{{project_info:project_info,text:'他的项目库',canEdit:1}}"></template>
+  <template is="financingProject" data="{{project_info:project_info,text:'项目店铺',canEdit:1}}"></template>
 
   <!--投资案例-->
   <template is="investProject" data="{{invest_case:invest_case,canEdit:canEdit}}"></template>
