--- a/Weitianshi/pages/my/projectShop/projectSearch/projectSearch.wxss
+++ b/Weitianshi/pages/my/projectShop/projectSearch/projectSearch.wxss
@@ -185,3 +185,10 @@
   right: 26rpx;
   bottom: 30rpx;
 } 
+.nullState {
+  position: absolute;
+  top: 642rpx;
+  left: 302rpx;
+  font-size: 36rpx;
+  color: #999;
+}
