--- a/Weitianshi/pages/search/search1/search1.wxss
+++ b/Weitianshi/pages/search/search1/search1.wxss
@@ -1,6 +1,8 @@
 /* pages/my/searchCompany/searchCompany.wxss */
 .searchBox{
     background: white;
+    width: 100%;
+    height:112rpx;
 }
 .searchCompany {
   height: 112rpx;
@@ -37,6 +39,8 @@
   letter-spacing: 0;
   line-height: 22rpx;
   text-align: left;
+    display: inline-block;
+
 }
 
 .exclamation {
@@ -45,6 +49,7 @@
   border-radius: 100%;
   margin-right: 8rpx;
   margin-left: 32rpx;
+  display: inline-block;
 }
 
 .hasNo {
