--- a/Weitianshi/pages/my/projectShop/projectShop/projectShop.wxss
+++ b/Weitianshi/pages/my/projectShop/projectShop/projectShop.wxss
@@ -1,5 +1,8 @@
 /* pages/my/projectFinance/projectFinance.wxss */
-
+page{
+  height: 100%;
+  overflow: hidden;
+}
 .weui-media-box__desc:last-child {
   border-right: none;
 }
