--- a/Weitianshi/pages/my/projectShop/projectShop/projectShop.wxml
+++ b/Weitianshi/pages/my/projectShop/projectShop/projectShop.wxml
@@ -1,141 +1,147 @@
 <import src="/pages/Template/Template.wxml" />
-<!--筛选和搜索  -->
-<view class="	screen flex">
-  <!--筛选  -->
-  <block wx:for='{{tab}}' wx:key='index'>
-    <view class='tabIndex {{currentIndex==index || item.arr==true?"deepBlue" : ""}}' data-index='{{index}}' bindtap='move'>
-      {{item.name}}
-      <image class='withAnimate {{currentIndex==index?"rotate" : ""}}' src='/img/downArrow.png'></image>
-    </view>
-  </block>
-  <!--搜索  -->
-  <icon type="search" size="15" class="search_icon" catchtap="searchSth"></icon>
-  <!--下拉框  -->
-  <view class='dropDown withAnimate'>
-    <view class='dropTitle' wx:if='{{currentIndex==0}}'>项目领域</view>
-    <view class='dropTitle' wx:if='{{currentIndex==1}}'>融资轮次</view>
-    <view class='dropTitle' wx:if='{{currentIndex==2}}'>期望融资</view>
-    <view class='dropTitle' wx:if='{{currentIndex==3}}'>项目地区</view>
-    <!--多选框  -->
-    <view class='flex dropFlex'>
-      <!--领域  -->
-      <block wx:for='{{industry}}' wx:if='{{currentIndex==0}}' wx:key='item.industry_id' wx:for-item='item1' wx:for-index='index1'>
-        <view class='checkbox {{item1.check==true?"checkOne":""}}' data-item="{{item1}}" data-index="{{index1}}" bindtap='tagsCheck'>
-          {{item1.industry_name}}
-        </view>
-      </block>
-      <!--轮次  -->
-      <block wx:for='{{stage}}' wx:if='{{currentIndex==1}}' wx:key='item.stage_id' wx:for-item='item2' wx:for-index='index2'>
-        <view class='checkbox {{item2.check==true?"checkOne":""}}' data-item="{{item2}}" data-index="{{index2}}" bindtap='tagsCheck'>
-          {{item2.stage_name}}
-        </view>
-      </block>
-      <!--金额  -->
-      <block wx:for='{{scale}}' wx:if='{{currentIndex==2}}' wx:key='item.sacle_id' wx:for-item='item3' wx:for-index='index3'>
-        <view class='checkbox scale {{item3.check==true?"checkOne":""}}' data-item="{{item3}}" data-index="{{index3}}" bindtap='tagsCheck'>
-          {{item3.scale_money}}
-        </view>
-      </block>
-      <!--地区  -->
-      <block wx:for='{{hotCity}}' wx:if='{{currentIndex==3}}' wx:key='item.area_id' wx:for-item='item4' wx:for-index='index4'>
-        <view class='checkbox {{item4.check==true?"checkOne":""}}' data-item="{{item4}}" data-index="{{index4}}" bindtap='tagsCheck'>
-          {{item4.area_title}}
-        </view>
-      </block>
-    </view>
-    <!--重置确定  -->
-    <view class='btnGroup flex' wx:if="{{currentIndex!=5}}">
-      <button bindtap='reset'>重置</button>
-      <button bindtap='searchCertain'>确定</button>
+<view>
+  <!--筛选和搜索  -->
+  <view class="	screen flex">
+    <!--筛选  -->
+    <block wx:for='{{tab}}' wx:key='index'>
+      <view class='tabIndex {{currentIndex==index || item.arr==true?"deepBlue" : ""}}' data-index='{{index}}' bindtap='move'>
+        {{item.name}}
+        <image class='withAnimate {{currentIndex==index?"rotate" : ""}}' src='/img/downArrow.png'></image>
+      </view>
+    </block>
+    <!--搜索  -->
+    <icon type="search" size="15" class="search_icon" catchtap="searchSth"></icon>
+    <!--下拉框  -->
+    <view class='dropDown withAnimate'>
+      <view class='dropTitle' wx:if='{{currentIndex==0}}'>项目领域</view>
+      <view class='dropTitle' wx:if='{{currentIndex==1}}'>融资轮次</view>
+      <view class='dropTitle' wx:if='{{currentIndex==2}}'>期望融资</view>
+      <view class='dropTitle' wx:if='{{currentIndex==3}}'>项目地区</view>
+      <!--多选框  -->
+      <view class='flex dropFlex'>
+        <!--领域  -->
+        <block wx:for='{{industry}}' wx:if='{{currentIndex==0}}' wx:key='item.industry_id' wx:for-item='item1' wx:for-index='index1'>
+          <view class='checkbox {{item1.check==true?"checkOne":""}}' data-item="{{item1}}" data-index="{{index1}}" bindtap='tagsCheck'>
+            {{item1.industry_name}}
+          </view>
+        </block>
+        <!--轮次  -->
+        <block wx:for='{{stage}}' wx:if='{{currentIndex==1}}' wx:key='item.stage_id' wx:for-item='item2' wx:for-index='index2'>
+          <view class='checkbox {{item2.check==true?"checkOne":""}}' data-item="{{item2}}" data-index="{{index2}}" bindtap='tagsCheck'>
+            {{item2.stage_name}}
+          </view>
+        </block>
+        <!--金额  -->
+        <block wx:for='{{scale}}' wx:if='{{currentIndex==2}}' wx:key='item.sacle_id' wx:for-item='item3' wx:for-index='index3'>
+          <view class='checkbox scale {{item3.check==true?"checkOne":""}}' data-item="{{item3}}" data-index="{{index3}}" bindtap='tagsCheck'>
+            {{item3.scale_money}}
+          </view>
+        </block>
+        <!--地区  -->
+        <block wx:for='{{hotCity}}' wx:if='{{currentIndex==3}}' wx:key='item.area_id' wx:for-item='item4' wx:for-index='index4'>
+          <view class='checkbox {{item4.check==true?"checkOne":""}}' data-item="{{item4}}" data-index="{{index4}}" bindtap='tagsCheck'>
+            {{item4.area_title}}
+          </view>
+        </block>
+      </view>
+      <!--重置确定  -->
+      <view class='btnGroup flex' wx:if="{{currentIndex!=5}}">
+        <button bindtap='reset'>重置</button>
+        <button bindtap='searchCertain'>确定</button>
+      </view>
     </view>
   </view>
-</view>
-<!--图片  -->
-<view class="shopBanner" bindtap="toPersonDetail">
-  <image src="/img/img-bg.jpg" class="bgPic" wx:if="{{!userInfo.shop_banner}}"></image>
-  <image src="{{userInfo.shop_banner}}" class="bgPic" wx:if="{{userInfo.shop_banner}}"></image>
-  <view class='modal picModal'></view>
-</view>
-<view class="userInfo zIndex99">
-  <view class="flex online">
-    <view class="userName">{{userInfo.user_real_name}}</view>
-    <view class="userPosition">{{userInfo.user_company_career}}</view>
-    <view class="flex line" wx:if="{{userInfo.authentication[0].group_title}}">
-      <image src="/img/icon-renzheng@2x.png" class="renzheng"></image>
-      <view class="userPart1">{{userInfo.authentication[0].group_title}}</view>
-    </view>
-    <view>
-      <image wx:if="{{userInfo.user_avatar_url}}" class="user_pic" src="{{userInfo.user_avatar_url}}"></image>
-      <view wx:if="{{userInfo.user_avatar_text}}" class="user_text noPic">{{userInfo.user_avatar_text}}</view>
-    </view>
+  <!--图片  -->
+  <view class="shopBanner" bindtap="toPersonDetail">
+    <image src="/img/img-bg.jpg" class="bgPic" wx:if="{{!userInfo.shop_banner}}"></image>
+    <image src="{{userInfo.shop_banner}}" class="bgPic" wx:if="{{userInfo.shop_banner}}"></image>
+    <view class='modal picModal'></view>
   </view>
-  <view class="userCompany">{{userInfo.user_company_name}}</view>
-</view>
-<!--店铺描述  -->
-<view class="shopDesBox" wx:if="{{userInfo.user_intro}}">
-  <view class="shopDes">店铺描述</view>
-  <view class="shopContent"  class="{{isChecked?'shopContent':'shopContentAfer'}}">{{userInfo.user_intro}}</view>
-  <label class="more" bindtap="allPoint" wx:if="{{isChecked == true && contentMore== true}}">全部</label>
-  <label class="more" bindtap="noPoint" wx:if="{{isChecked == false && contentMore == true}}">收起</label></view>
-<view style="height:30rpx;"></view>
-<!--符合条件的我的项目  -->
-<scroll-view style="height:454rpx;" scroll-y="true" bindscrolltolower='loadMore'  wx:if="{{myProject.length !=0}}">
-  <block wx:for="{{myProject}}" wx:key="{{index}}">
-    <view class="outBox picFather" wx:if="{{item.handle_status != 2 }}">
-      <view class="insideBox">
-        <view data-id="{{item.project_id}}" bindtap="detail">
-          <view class="flex">
-            <view class="describle" wx:if="{{item.pro_intro != ''}}">{{item.pro_intro}}</view>
-            <image src="/img/img-dujiaqianyue1@2x.png" class="projectDetailType" wx:if="{{item.is_exclusive == 1}}"></image>
-            <image src="/img/img-feidujiaqianyue@2x.png" class="projectDetailType" wx:if="{{item.is_exclusive == 2}}"></image>
-          </view>
-          <view class="allIndustry" style="text-align:left">
-            <block wx:for="{{item.pro_industry}}" wx:key="{{index}}" wx:for-item='industry'>
-              <label class="noLight" wx:if="{{index < item.pro_industry.length-1}}">{{industry.industry_name}}、</label>
-              <label class="'noLight" wx:if="{{index == item.pro_industry.length-1}}">{{industry.industry_name}}</label>
-            </block>
-          </view>
-          <view class="allProjectDetail flex " wx:if="{{item.pro_area != ''||item.pro_finance_stock_after!=0||item.pro_stage!=''||item.pro_scale!=''}}">
-            <view class="projectDetailLine" wx:if="{{item.pro_scale != ''}}">{{item.pro_scale.scale_money}}</view>
-            <view class="projectDetailLine" wx:if="{{item.pro_finance_stock_after != ''}}">{{item.pro_finance_stock_after}}%</view>
-            <view class="projectDetailLine" wx:if="{{item.pro_stage != ''}}">{{item.pro_stage.stage_name}}</view>
-            <view class="projectDetailLine" wx:if="{{item.pro_area != ''}}">{{item.pro_area.area_title}}</view>
-          </view>
-          <view class="star" catchtap="clickProject" data-id="{{item.project_id}}" wx:if="{{otherPerson == false}}" data-top="{{item.is_top}}">
-            <image src="/img/icon-zhiding-n@2x.png" class="starPic"  wx:if='{{item.is_top == 0}}'></image>
-            <image src="/img/icon-zhiding-s@2x.png" class="starPic" wx:if='{{item.is_top == 1}}' ></image>  
-          </view>
-          <view class="top" data-id="{{item.project_id}}" wx:if="{{otherPerson == true}}"> 
-           <image src="/img/img-tuijian@2x.png"  class="topPic" wx:if="{{item.is_top == 1 }}"></image>
+  <view class="userInfo zIndex99">
+    <view class="flex online">
+      <view class="userName">{{userInfo.user_real_name}}</view>
+      <view class="userPosition">{{userInfo.user_company_career}}</view>
+      <view class="flex line" wx:if="{{userInfo.authentication[0].group_title}}">
+        <image src="/img/icon-renzheng@2x.png" class="renzheng"></image>
+        <view class="userPart1">{{userInfo.authentication[0].group_title}}</view>
+      </view>
+      <view>
+        <image wx:if="{{userInfo.user_avatar_url}}" class="user_pic" src="{{userInfo.user_avatar_url}}"></image>
+        <view wx:if="{{userInfo.user_avatar_text}}" class="user_text noPic">{{userInfo.user_avatar_text}}</view>
+      </view>
+    </view>
+    <view class="userCompany">{{userInfo.user_company_name}}</view>
+  </view>
+  <!--店铺描述  -->
+  <view class="shopDesBox" wx:if="{{userInfo.user_intro}}">
+    <view class="shopDes">店铺描述</view>
+    <view class="shopContent" class="{{isChecked?'shopContent':'shopContentAfer'}}">{{userInfo.user_intro}}</view>
+    <label class="more" bindtap="allPoint" wx:if="{{isChecked == true && contentMore== true}}">全部</label>
+    <label class="more" bindtap="noPoint" wx:if="{{isChecked == false && contentMore == true}}">收起</label>
+  </view>
+  <view style="height:30rpx;"></view>
+  <!--符合条件的我的项目  -->
+  <scroll-view style="height:454rpx;" scroll-y="true" bindscrolltolower='loadMore' wx:if="{{myProject.length !=0}}">
+    <block wx:for="{{myProject}}" wx:key="{{index}}">
+      <view class="outBox picFather" wx:if="{{item.handle_status != 2 }}">
+        <view class="insideBox">
+          <view data-id="{{item.project_id}}" bindtap="detail">
+            <view class="flex">
+              <view class="describle" wx:if="{{item.pro_intro != ''}}">{{item.pro_intro}}</view>
+              <image src="/img/img-dujiaqianyue1@2x.png" class="projectDetailType" wx:if="{{item.is_exclusive == 1}}"></image>
+              <image src="/img/img-feidujiaqianyue@2x.png" class="projectDetailType" wx:if="{{item.is_exclusive == 2}}"></image>
+            </view>
+            <view class="allIndustry" style="text-align:left">
+              <block wx:for="{{item.pro_industry}}" wx:key="{{index}}" wx:for-item='industry'>
+                <label class="noLight" wx:if="{{index < item.pro_industry.length-1}}">{{industry.industry_name}}、</label>
+                <label class="'noLight" wx:if="{{index == item.pro_industry.length-1}}">{{industry.industry_name}}</label>
+              </block>
+            </view>
+            <view class="allProjectDetail flex " wx:if="{{item.pro_area != ''||item.pro_finance_stock_after!=0||item.pro_stage!=''||item.pro_scale!=''}}">
+              <view class="projectDetailLine" wx:if="{{item.pro_scale != ''}}">{{item.pro_scale.scale_money}}</view>
+              <view class="projectDetailLine" wx:if="{{item.pro_finance_stock_after != ''}}">{{item.pro_finance_stock_after}}%</view>
+              <view class="projectDetailLine" wx:if="{{item.pro_stage != ''}}">{{item.pro_stage.stage_name}}</view>
+              <view class="projectDetailLine" wx:if="{{item.pro_area != ''}}">{{item.pro_area.area_title}}</view>
+            </view>
+            <view class="star" catchtap="clickProject" data-id="{{item.project_id}}" wx:if="{{otherPerson == false}}" data-top="{{item.is_top}}">
+              <image src="/img/icon-zhiding-n@2x.png" class="starPic" wx:if='{{item.is_top == 0}}'></image>
+              <image src="/img/icon-zhiding-s@2x.png" class="starPic" wx:if='{{item.is_top == 1}}'></image>
+            </view>
+            <view class="top" data-id="{{item.project_id}}" wx:if="{{otherPerson == true}}">
+              <image src="/img/img-tuijian@2x.png" class="topPic" wx:if="{{item.is_top == 1 }}"></image>
+            </view>
           </view>
         </view>
       </view>
-    </view>
-  </block>
-</scroll-view>
- <view class="emptyStyle" wx:if="{{myProject.length==0}}">
-  <view>您的店铺是空的</view>
-  <view>点击“新增项目”打造店铺</view>
-</view> 
-
-<view class="highBox"></view>
-<view class="aboutNetwork flex"  wx:if="{{otherPerson == false}}">
-  <view bindtap="decorate">
-    <label class="shop">店铺装修</label>
+    </block>
+  </scroll-view>
+  <view class="emptyStyle" wx:if="{{myProject.length==0}}">
+    <view>您的店铺是空的</view>
+    <view>点击“新增项目”打造店铺</view>
   </view>
-  <view bindtap="editDetail" class="newProject">新增项目</view>
+
+  <view class="highBox"></view>
+  <view class="aboutNetwork flex" wx:if="{{otherPerson == false}}">
+    <view bindtap="decorate">
+      <label class="shop">店铺装修</label>
+    </view>
+    <view bindtap="editDetail" class="newProject">新增项目</view>
+  </view>
+
+  <!--错误提示-->
+  <view class="error" wx:if="{{error=='1'}}">{{error_text}}</view>
+  <view class="aboutNetwork flex" wx:if="{{otherPerson == true}}">
+    <view bindtap="toMyShop">
+      <label class="myShop">我的店铺</label>
+    </view>
+    <view bindtap="pushProject">
+      <label class="myShop">推送项目</label>
+    </view>
+    <view bindtap="moreProject" class="newProject">更多精选项目</view>
+  </view>
+  <!--模态层  -->
+  <view class='modal' wx:if='{{currentIndex!=5}}' bindtap='modal'></view>
+
+  <!--筛选无结果  -->
+  <view class="hasNoThing">暂时没有符合该条件的项目</view>
 </view>
-
-<!--错误提示-->
-<view class="error" wx:if="{{error=='1'}}">{{error_text}}</view>
- <view class="aboutNetwork flex" wx:if="{{otherPerson == true}}">
-  <view bindtap="toMyShop"><label class="myShop">我的店铺</label></view>
-  <view bindtap="pushProject"><label class="myShop">推送项目</label></view>
-  <view bindtap="moreProject" class="newProject">更多精选项目</view>
-</view> 
-<!--模态层  -->
-<view class='modal' wx:if='{{currentIndex!=5}}' bindtap='modal'></view>
-
-<!--筛选无结果  -->
-
-<view class="hasNoThing">暂时没有符合该条件的项目</view>
