--- a/Weitianshi/pages/my/projectShop/projectShop/projectShop.wxss
+++ b/Weitianshi/pages/my/projectShop/projectShop/projectShop.wxss
@@ -128,6 +128,7 @@ page{
   display: -webkit-box;
   -webkit-line-clamp: 2;
   -webkit-box-orient: vertical;
+  height: 78rpx;
 }
 
 .shopDesBox .shopContentAfer {
@@ -547,4 +548,10 @@ page{
 }
 .btnGroup {
   margin-bottom:20rpx;
+}
+.projectList{
+  height: 454rpx;
+}
+.newProjectList{
+  height:726rpx;
 }
