--- a/Weitianshi/pages/Template/Template.wxml
+++ b/Weitianshi/pages/Template/Template.wxml
@@ -743,6 +743,7 @@
   </view> 
 </template>
 
+<!--推送项目  -->
 <template name="pushProjectTo">
   <block wx:for="{{contentList}}" wx:key="{{contentList}}">
     <view  class="{{item.record_id ==  record_id ? 'hide':''}}">
