--- a/Weitianshi/pages/search/search2/search2.wxml
+++ b/Weitianshi/pages/search/search2/search2.wxml
@@ -9,7 +9,7 @@
   <view class="esc" bindtap="searchEsc">取消</view>
 </view>
 <view class="s_frame" hidden="{{contacts=='' || !contacts}}">
-  <scroll-view scroll-y="true" bindscrolltolower="loadMore" scroll-top="{{scroll}}">
+  <scroll-view scroll-y="true" bindscrolltolower="loadMore" scroll-top="{{scroll}}" style='height:2000rpx;'>
     <view class="contacts">
       <block wx:for="{{contacts}}" wx:key="{{item.user_id}}">
         <view class="card" data-id="{{item.user_id}}" bindtap="userDetail">
