--- a/Weitianshi/pages/my/sharePage/sharePage.wxml
+++ b/Weitianshi/pages/my/sharePage/sharePage.wxml
@@ -1,5 +1,6 @@
 <import src="/pages/Template/Template.wxml" />
 <scroll-view id="my" scroll-y="true">
+<template is="topBlock"></template>
   <!--我的名片-->
   <template is="userInfo" data="{{user:user,count:count,text:'加他为人脉',show:0,IdentificationShow:0,playTime:1}}"></template>
 
