--- a/Weitianshi/pages/Template/Template.wxml
+++ b/Weitianshi/pages/Template/Template.wxml
@@ -876,3 +876,25 @@
   </block>
    <view class="highBox"></view>
 </template>
+
+<!--创建项目+到电脑端  -->
+<template name="createProject">
+ <view class="floatBtn">
+    <view class="t-accreditation flex">
+      <view>{{text}}</view>
+      <view class="t-btnToAccreditation" bindtap="toCreateProject">创建项目</view>
+      <view class="t-goPc">电脑上创建</view>
+    </view>
+  </view>
+</template>
+
+<!-- 分享引导模块 -->
+<template name="topBlock">
+  <image src="https://weitianshi-2017.oss-cn-shanghai.aliyuncs.com/image/20170904/img-banner.png" class="t-contactsPic"></image>
+<view class="t-blockContent">这里是ldkjfklasdjf sdlkjf sld 文案</view>
+  <view class="flex t-btnBox">
+  <view class="t-faBtn">fa</view>
+   <view class="t-investorBtn">投资方</view>
+    <view class="t-startupBtn">创业者</view>
+  </view>
+</template>
