--- a/Weitianshi/pages/projectDetail/projectDetail.wxss
+++ b/Weitianshi/pages/projectDetail/projectDetail.wxss
@@ -1193,3 +1193,101 @@ button::after {
 .projectDetailLine:last-child {
   border-right: none;
 }
+
+.contactProject, .businessBook {
+  font-size: 28rpx;
+  color: #fff;
+  letter-spacing: 0;
+  line-height: 28rpx;
+  text-align: center;
+  width: 40.5%;
+  background: #40587a;
+  margin: 30rpx 0;
+  border-right: 1rpx solid #e6e6e6;
+}
+
+.businessBook {
+  border: none;
+}
+
+.flexBox {
+  background: #40587a;
+  height: 88rpx;
+}
+
+.collectBox {
+  background: #fff;
+  width: 192rpx;
+  height: 88rpx;
+    text-align: center;
+  line-height: 108rpx;
+}
+
+.collectPic {
+  width: 36rpx;
+  height: 36rpx;
+}
+/*模态框  */
+.modalBox {
+  background: rgba(0, 0, 0, 0.5);
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  left: 0;
+  top: 0;
+}
+.contactModalBox {
+  height: 616rpx;
+  width: 534rpx;
+  background-color: white;
+  margin-top: 206rpx;
+  margin-left: 64rpx;
+  padding: 40rpx 32rpx 32rpx 32rpx;
+  position: relative;
+}
+.modalTitle{
+font-size:36rpx;
+color:#333333;
+line-height:36rpx;
+text-align:center;
+}
+.modalContent{
+border:1rpx solid #e6e6e6;
+/* width:504rpx; */
+height:258rpx;
+margin-top:32rpx;
+margin-bottom:24rpx;
+margin-right: 0;
+outline: none;
+padding-top:20rpx;
+padding-left:24rpx;
+font-size:28rpx;
+color:#999999;
+line-height:28rpx;
+}
+.modalTips{
+font-size:28rpx;
+color:#666666;
+line-height:40rpx;
+text-align:center;
+padding:0 28rpx;
+}
+.btn{
+background:#40587a;
+border-radius:6rpx;
+width:506rpx;
+height:88rpx;
+font-size:32rpx;
+color:#ffffff;
+line-height:88rpx;
+text-align:center;
+margin-top: 72rpx;
+}
+.close{
+  width:48rpx;
+  height:48rpx;
+  position: absolute;
+  top:185rpx;
+  right:67rpx;
+  z-index: 99;
+}
