--- a/Weitianshi/app.wxss
+++ b/Weitianshi/app.wxss
@@ -529,6 +529,7 @@ textarea {
   color: #666;
   line-height: 80rpx;
   text-align: center;
+  z-index:999;
 }
 
 .withAnimate {
@@ -625,4 +626,15 @@ textarea {
 
 .search_icon {
   padding: 10rpx 30rpx;
+}
+/*模态框*/
+.t-modal {
+  position: absolute;
+  left: 0;
+  top: 80rpx;
+  width: 100%;
+  height: 1174rpx;
+  background: black;
+  opacity: 0.5;
+  z-index: 99;
 }
