--- a/Weitianshi/pages/discoverProject/discoverProject.wxml
+++ b/Weitianshi/pages/discoverProject/discoverProject.wxml
@@ -55,7 +55,7 @@
   </view>
 </view>
 <!--项目展示列表  -->
-<swiper current="{{currentTab}}" class="swiper-box" duration="300" style="height:1040rpx" bindchange="bindChange">
+<swiper current="{{currentTab}}" class="swiper-box" duration="300" style="height:945rpx" bindchange="bindChange">
   <!--精选  -->
   <swiper-item>
     <!--banner轮播  -->
@@ -79,10 +79,13 @@
         </view>
       </view>
     </scroll-view>
+    <!--模态层  -->
+    <view class='t-modal' wx:if='{{currentIndex!=5}}' bindtap='modal'></view>
   </swiper-item>
   <!--最新 -->
   <swiper-item>
-    2
+    <!--模态层  -->
+    <view class='t-modal' wx:if='{{currentIndex!=5}}' bindtap='modal'></view>
   </swiper-item>
 </swiper>
 <!--错误提示-->
